<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_grey"
    >
    <RelativeLayout
        android:id="@+id/interactive_bar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="#E04949"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:text="@string/interactive"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/interactive_infoCheck"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/info_check"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/general_title_grey"
                android:text="@string/infoCheck"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profileCheck"
                android:textSize="12sp"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/light_grey"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/interactive_submitApplication"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/submit_application"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/general_title_grey"
                android:text="@string/submitApplication"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onlineSubmit"
                android:textSize="12sp"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/light_grey"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/interactive_rules"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/rules"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/general_title_grey"
                android:text="@string/rules"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CPCRules"
                android:textSize="12sp"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/light_grey"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/interactive_questionnaire"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/questionnaire"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/general_title_grey"
                android:text="@string/questionnaire"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionnaire"
                android:textSize="12sp"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="50dp"
                android:textColor="@color/light_grey"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="4dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/red">
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:textColor="@color/general_title_grey"
            android:text="@string/studyInfo"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/interactive_fileInfo"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/file_info"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_centerVertical="true"
                android:textColor="@color/general_title_grey"
                android:text="@string/fileInfo"
                android:textSize="14sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/interactive_videoInfo"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_centerVertical="true"
                android:textColor="@color/general_title_grey"
                android:text="@string/videoInfo"
                android:textSize="14sp"
                />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/video_info"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="4dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/red">
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:textColor="@color/general_title_grey"
            android:text="@string/membership"/>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#ffff0000"
        android:dividerHeight="10dp"
        android:id="@+id/interactive_list">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
