<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<LinearLayout
    android:id="@+id/home_fragment_ll"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/red"
    >
<LinearLayout
    android:id="@+id/home_news_ll"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news"
        android:drawableTop="@mipmap/news"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        />
</LinearLayout>
    <LinearLayout
        android:id="@+id/home_style_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style"
            android:drawableTop="@mipmap/style"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/home_theoretical_overview_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theoretical_overview"
            android:drawableTop="@mipmap/theoretical_overview"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/home_announcement_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announcement"
            android:drawableTop="@mipmap/announcement"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            />
    </LinearLayout>
</LinearLayout>

</LinearLayout>
