<?xml version="1.0" encoding="utf-8"?>
<com.communistpartyconstruction.Support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_submit_application"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.communistpartyconstruction.Activity.SubmitApplicationActivity">
    <RelativeLayout
        android:id="@+id/submitApplication_bar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="#E04949"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">
        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/submitApplication_goBack"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/back"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:text="@string/submitApplication"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personalInformationForm"
        android:textSize="16sp"
        android:textColor="@color/general_title_grey"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:background="@drawable/submit_application_form_background">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationName"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_name"
                android:paddingTop="11dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationGender"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_gender"
                android:paddingTop="15dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:background="@drawable/submit_application_form_background">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationRacial"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_racial"
                android:paddingTop="11dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationBirthday"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_birthday"
                android:paddingTop="15dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:background="@drawable/submit_application_form_background">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationNativePlace"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_nativePlace"
                android:paddingTop="11dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationBirthPlace"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_birthPlace"
                android:paddingTop="15dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:background="@drawable/submit_application_form_background">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationEducation"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_education"
                android:paddingTop="11dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationSchool"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_school"
                android:paddingTop="15dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:background="@drawable/submit_application_form_background">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationWork"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_work"
                android:paddingTop="11dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:background="@drawable/submit_application_form_background">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationPresentPlace"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_presentPlace"
                android:paddingTop="11dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:background="@drawable/submit_application_form_background">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationID"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_id"
                android:paddingTop="11dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:background="@drawable/submit_application_form_background">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:text="@string/personalInformationSpecial"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/hint_grey"
                android:textSize="14sp"
                android:id="@+id/submitApplication_special"
                android:paddingTop="11dp"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_widthPercent="68%"
        app:layout_marginTopPercent="5%"
        android:background="@drawable/login_confirmbutton"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:id="@+id/submitApplication_submitButton"
        />
</com.communistpartyconstruction.Support.PercentLinearLayout>
