<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/mainactivity_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="@color/grey"
            />

        <RadioGroup
            android:id="@+id/mainactivity_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/mainactivity_rb_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:button="@null"
                android:textSize="12sp"
                android:text="@string/home"
                android:drawableTop="@drawable/home_click"
                android:drawablePadding="2dp"
                android:textColor="@drawable/navigationbar_click"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/mainactivity_rb_interactive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:button="@null"
                android:textSize="12sp"
                android:drawablePadding="2dp"
                android:text="@string/interactive"
                android:drawableTop="@drawable/interactive_click"
                android:textColor="@drawable/navigationbar_click"
                />
            <RadioButton
                android:id="@+id/mainactivity_rb_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:button="@null"
                android:textSize="12sp"
                android:drawablePadding="2dp"
                android:text="@string/me"
                android:drawableTop="@drawable/me_click"
                android:textColor="@drawable/navigationbar_click"
                />
        </RadioGroup>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainactivity_fragment"
        android:layout_above="@id/mainactivity_ll"
        >
    </FrameLayout>

</RelativeLayout>
